monticore-generator/src/test/resources/cocos/invalid/A4064/A4064.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4064;

grammar A4064 {
  Foo = "--";

  nokeyword "--";

}
